# PropWare

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  About.md  AppDeployment.md  CMakeCPack.cmake  CMakeCPackOptions.cmake  CMakeCPackOptions.cmake.in  CMakeForPropware.md  CMakeLists.txt  CMakeListsForPropware.md  CMakePropWareInstall.cmake  CMakePropWarePackage.cmake  CMakePropellerDefOptions.cmake  CMakePropellerFooter.cmake  CMakePropellerHeader.cmake  CMakePropellerLibDeps.cmake  CMakePropellerSetFlags.cmake  CMakePropellerSetLinker.cmake  CMakePropellerUtilFunc.cmake  CMakeToolchain.cmake  CMakeTutorial.md  CMake_header.cmake  CPackConfig.cmake  CXXCrashCourse.md  Dockerfile  DocumentationConfig.cmake  DownloadCMake.cmake  DownloadCMakeBinaries.cmake  DownloadSpin2cpp.cmake  DownloadWindowsBinaries.cmake  Doxyfile  Doxyfile.in  DoxygenLayout.xml  DoxygenREADME.md  Generic-gcc-Propeller.cmake  Install.md  LICENSE  (+68 more)
Examples/: CMakeLists.txt  Examples.dox  Makefile
Examples/ArduinoJson/: ArduinoJson_Demo.cpp  CMakeLists.txt
Examples/Cogc/: CMakeLists.txt  Cogc_Demo.cpp  blinky.cogcpp
Examples/Concurrency/: CMakeLists.txt  Concurrency_Demo.cpp  Concurrency_Demo.h  Makefile
Examples/GettingStarted/: CMakeLists.txt  GettingStarted.cpp
Examples/HD44780/: HD44780_Demo.c  HD44780_Demo.cpp  HD44780_Demo.h  Makefile
Examples/Hello/: CMakeLists.txt  Hello_Demo.cpp
Examples/I2C/: I2C_Demo.c  Makefile
Examples/L3G/: L3G_Demo.c  L3G_Demo.cpp  L3G_Demo.h
Examples/Libpropeller_Pwm32/: CMakeLists.txt  PWM32_Demo.cpp
Examples/MAX6675/: MAX6675_Demo.c  MAX6675_Demo.cpp  MAX6675_Demo.h  Makefile
Examples/MCP300x/: MCP300x_Demo.c  MCP300x_Demo.cpp  MCP300x_Demo.h  Makefile
Examples/PropWare/: CMakeLists.txt  Makefile  PropWare_Demo.c  PropWare_Demo.cpp  PropWare_Demo.h
Examples/PropWare_ADXL345/: ADXL345_Demo.cpp  CMakeLists.txt
Examples/PropWare_BNO055/: BNO055_Demo.cpp  CMakeLists.txt
Examples/PropWare_Blinky/: Blinky_Demo.cpp  CMakeLists.txt
Examples/PropWare_BufferedUART/: BufferedUART_Demo.cpp  BufferedUART_Demo.h  CMakeLists.txt  buffereduartrx.cogcpp  buffereduarttx.cogcpp
Examples/PropWare_BufferedUARTRX/: BufferedUARTRX_Demo.cpp  BufferedUARTRX_Demo.h  CMakeLists.txt  buffereduartrx.cogcpp
Examples/PropWare_DualPWM/: CMakeLists.txt  DualPWM_Demo.cpp
Examples/PropWare_DuplexUART/: CMakeLists.txt  DuplexUART_Demo.cpp  DuplexUART_Demo.h  Makefile  README
Examples/PropWare_Eeprom/: CMakeLists.txt  Eeprom_Demo.cpp
Examples/PropWare_FatFS/: CMakeLists.txt  FatFS_Demo.cpp  FileReader_Demo.cpp
Examples/PropWare_FileReader/: CMakeLists.txt  FileReader_Demo.cpp
Examples/PropWare_FileWriter/: CMakeLists.txt  FileWriter_Demo.cpp  README.md
Examples/PropWare_FullDuplexSerial/: CMakeLists.txt  FullDuplexSerial_Demo.cpp
Examples/PropWare_HD44780/: CMakeLists.txt  HD44780_Demo.cpp  HD44780_Demo.h
Examples/PropWare_I2C/: CMakeLists.txt  PropWareI2C_Demo.cpp
Examples/PropWare_I2CSlave/: CMakeLists.txt  I2CSlave_Demo.cpp  PropWareI2CSlave_Demo.cpp  PropWareI2C_Demo.cpp
Examples/PropWare_Keypad/: CMakeLists.txt  Keypad_Demo.cpp
Examples/PropWare_L3G/: CMakeLists.txt  L3G_Demo.cpp  L3G_Demo.h  Makefile
Examples/PropWare_MAX6675/: CMakeLists.txt  MAX6675_Demo.cpp  MAX6675_Demo.h  Makefile  README.markdown
Examples/PropWare_MAX72xx/: CMakeLists.txt  MAX72xx_Demo.cpp
Examples/PropWare_MCP2515/: CMakeLists.txt  MCP2515_Demo.cpp
Examples/PropWare_MCP3000/: CMakeLists.txt  MCP3000_Demo.cpp  MCP3000_Demo.h  Makefile  README  README.markdown
Examples/PropWare_MCP300x/: MCP300x_Demo.cpp
Examples/PropWare_MCP3xxx/: CMakeLists.txt  MCP3xxx_Demo.cpp  README.markdown
Examples/PropWare_MultiCogBlinky/: CMakeLists.txt  MultiCogBlinky_Demo.cpp  MultiCogBlinky_Demo.h
Examples/PropWare_PCF8591/: CMakeLists.txt  PCF8591_Demo.cpp
Examples/PropWare_PWEdit/: CMakeLists.txt  PWEdit_Demo.cpp
Examples/PropWare_Ping/: CMakeLists.txt  Ping_Demo.cpp
Examples/PropWare_Queue/: CMakeLists.txt  Queue_Demo.cpp
Examples/PropWare_Runnable/: CMakeLists.txt  Runnable_Demo.cpp
Examples/PropWare_SD/: CMakeLists.txt  Makefile  README  SD_Demo.cpp  SD_Demo.h
Examples/PropWare_SPI/: CMakeLists.txt  README  README.markdown  SPI_Demo.cpp  SPI_Demo.h
Examples/PropWare_Scanner/: CMakeLists.txt  README  README.markdown  Scanner_Demo.cpp
Examples/PropWare_SeeedTFT/: CMakeLists.txt  SeeedTFT_Demo.cpp  SeeedTFT_Demo.h
Examples/PropWare_Simple_Hybrid/: CMakeLists.txt  Hybrid_Demo.cpp
Examples/PropWare_SimplexUART/: CMakeLists.txt  Makefile  README  README.markdown  SimplexUART_Demo.cpp  SimplexUART_Demo.h
Examples/PropWare_Spin2Dat/: CMakeLists.txt  Spin2Dat_Demo.cpp
Examples/PropWare_Stepper/: CMakeLists.txt  Stepper_Demo.cpp
Examples/PropWare_StringBuilder/: CMakeLists.txt  StringBuilder_Demo.cpp
Examples/PropWare_SynchronousPrinter/: CMakeLists.txt  SynchronousPrinter_Demo.cpp
Examples/PropWare_UART/: Makefile  UART_Demo.cpp  UART_Demo.h
Examples/PropWare_UARTRX/: CMakeLists.txt  README.markdown  UARTRX_Demo.cpp
Examples/PropWare_UARTTX/: CMakeLists.txt  UARTTX_Demo.cpp
Examples/PropWare_Utility/: CMakeLists.txt  Utility_Demo.cpp
Examples/PropWare_VGAText/: CMakeLists.txt  VGAText_Demo.cpp
Examples/PropWare_WS2812/: CMakeLists.txt  WS2812_Demo.cpp
Examples/PropWare_WatchDog/: CMakeLists.txt  WatchDog_Demo.cpp
Examples/SD/: Makefile  SD_Demo.c  SD_Demo.cpp  SD_Demo.h
Examples/SPI/: Makefile  SPI_Demo.c  SPI_Demo.cpp  SPI_Demo.h
PropWare/: CMakeLists.txt  Makefile  PropWare.cpp  PropWare.h  PropWareObjects.mk  PropWare_asm.h  blockstorage.h  c++allocate.h  comparator.cpp  comparator.h  eeprom.h  fatfile.h  fatfs.cpp  fatfs.h  file.h  filesystem.h  hd44780.cpp  hd44780.h  i2c.cpp  i2c.h  i2cbase.h  l3g.cpp  l3g.h  max6675.cpp  max6675.h  mcp3000.cpp  mcp3000.h  mcp300x.cpp  mcp300x.h  mcp3xxx.h  pcf8591.h  pin.cpp  pin.h  ping.h  port.cpp  port.h  printcapable.h  printer.cpp  printer.h  queue.h  (+26 more)
external_libs/: CMakeLists.txt  ParseSimpleIDEMetaData.cmake
libpropeller/: CMakeLists.txt  LICENSE.TXT  run_all_tests
(+617 files in other folders)
