add_subdirectory(Cogc)
add_subdirectory(Concurrency)
add_subdirectory(GettingStarted)
add_subdirectory(Hello)
add_subdirectory(Libpropeller_Pwm32)
add_subdirectory(PropWare_Blinky)
add_subdirectory(PropWare_DuplexUART)
add_subdirectory(PropWare_FileReader)
add_subdirectory(PropWare_FileWriter)
add_subdirectory(PropWare_HD44780)
add_subdirectory(PropWare_I2C)
add_subdirectory(PropWare_L3G)
add_subdirectory(PropWare_MAX6675)
add_subdirectory(PropWare_MCP3000)
add_subdirectory(PropWare_MultiCogBlinky)
add_subdirectory(PropWare_PCF8591)
add_subdirectory(PropWare_Queue)
add_subdirectory(PropWare_Runnable)
add_subdirectory(PropWare_Scanner)
add_subdirectory(PropWare_SimplexUART)
add_subdirectory(PropWare_Simple_Hybrid)
add_subdirectory(PropWare_SPI)
add_subdirectory(PropWare_Stepper)
add_subdirectory(PropWare_SynchronousPrinter)
add_subdirectory(PropWare_Utility)
add_subdirectory(PropWare_WS2812)
#add_subdirectory(Simple_AdcAcPropAb)
add_subdirectory(Simple_FdSerial)
add_subdirectory(Simple_SimpleText)
add_subdirectory(PropWare_StringBuilder)
