set(PROPWARE_SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/filesystem/fat/fatfile.h
    ${CMAKE_CURRENT_LIST_DIR}/filesystem/fat/fatfilereader.h
    ${CMAKE_CURRENT_LIST_DIR}/filesystem/fat/fatfilewriter.h
    ${CMAKE_CURRENT_LIST_DIR}/filesystem/fat/fatfs.h
    ${CMAKE_CURRENT_LIST_DIR}/filesystem/file.h
    ${CMAKE_CURRENT_LIST_DIR}/filesystem/filereader.h
    ${CMAKE_CURRENT_LIST_DIR}/filesystem/filesystem.h
    ${CMAKE_CURRENT_LIST_DIR}/filesystem/filewriter.h
    ${CMAKE_CURRENT_LIST_DIR}/gpio/pin.h
    ${CMAKE_CURRENT_LIST_DIR}/gpio/port.h
    ${CMAKE_CURRENT_LIST_DIR}/hmi/output/hd44780.h
    ${CMAKE_CURRENT_LIST_DIR}/hmi/output/ws2812.h
    ${CMAKE_CURRENT_LIST_DIR}/memory/blockstorage.h
    ${CMAKE_CURRENT_LIST_DIR}/memory/eeprom.h
    ${CMAKE_CURRENT_LIST_DIR}/memory/sd.h
    ${CMAKE_CURRENT_LIST_DIR}/monitor/watchdog.h
    ${CMAKE_CURRENT_LIST_DIR}/motor/stepper.h
    ${CMAKE_CURRENT_LIST_DIR}/sensor/analog/mcp3xxx.h
    ${CMAKE_CURRENT_LIST_DIR}/sensor/analog/pcf8591.h
    ${CMAKE_CURRENT_LIST_DIR}/sensor/distance/ping.h
    ${CMAKE_CURRENT_LIST_DIR}/sensor/gyroscope/l3g.h
    ${CMAKE_CURRENT_LIST_DIR}/sensor/temperature/max6675.h
    ${CMAKE_CURRENT_LIST_DIR}/serial/i2c/i2c.cpp
    ${CMAKE_CURRENT_LIST_DIR}/serial/i2c/i2c.h
    ${CMAKE_CURRENT_LIST_DIR}/serial/i2c/i2cbase.h
    ${CMAKE_CURRENT_LIST_DIR}/serial/spi/spi.h
    ${CMAKE_CURRENT_LIST_DIR}/serial/uart/uart.cpp # FIXME
    ${CMAKE_CURRENT_LIST_DIR}/string/printer/printcapable.h
    ${CMAKE_CURRENT_LIST_DIR}/string/printer/printer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/string/printer/printer.h
    ${CMAKE_CURRENT_LIST_DIR}/string/printer/synchronousprinter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/string/printer/synchronousprinter.h
    ${CMAKE_CURRENT_LIST_DIR}/string/scanner/scancapable.h
    ${CMAKE_CURRENT_LIST_DIR}/string/scanner/scanner.cpp
    ${CMAKE_CURRENT_LIST_DIR}/string/scanner/scanner.h
    ${CMAKE_CURRENT_LIST_DIR}/string/staticstringbuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/string/stringbuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/utility/comparator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utility/comparator.h
    ${CMAKE_CURRENT_LIST_DIR}/utility/queue.h
    ${CMAKE_CURRENT_LIST_DIR}/utility/runnable.h
    ${CMAKE_CURRENT_LIST_DIR}/utility/utility.h
    ${CMAKE_CURRENT_LIST_DIR}/c++allocate.h
    ${CMAKE_CURRENT_LIST_DIR}/PropWare.cpp
    ${CMAKE_CURRENT_LIST_DIR}/PropWare.h
)

add_subdirectory(models/cog)
add_subdirectory(models/cmm)
add_subdirectory(models/lmm)
add_subdirectory(models/xmmc)
add_subdirectory(models/xmm-single)
add_subdirectory(models/xmm-split)
